Data display updated.

--- a/Calendar/Calendar_Web_App/html/index.html
+++ b/Calendar/Calendar_Web_App/html/index.html
@@ -28,11 +28,7 @@
           </table>
         </div>
         <!-- Future implementations. -->
-        <div class="data">
-          <div class="data_content">
-            <p class="p_data_content">No content.</p>
-          </div>
-        </div>
+        <div class="data_display"></div>
       </div>
       <div class="buttons">
         <button id="back_button">
