--- a/Calendar/Calendar_Web_App/html/index.html
+++ b/Calendar/Calendar_Web_App/html/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
+    <div id="add_schedule">
+    </div>
     <div class="main">
       <div class="title">
         <span class="year_title" id="year_title"></span>
@@ -28,7 +30,7 @@
           </table>
         </div>
         <!-- Future implementations. -->
-        <div class="data_display"></div>
+        <div id="data_display" class="data_display"></div>
       </div>
       <div class="buttons">
         <button id="back_button">
