Tweaks in the new form.

--- a/Calendar/Calendar_Web_App/html/index.html
+++ b/Calendar/Calendar_Web_App/html/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <div id="add_schedule">
+    <div id="add_schedule" class="hide_pop_up">
+      <div class="close_button">
+        <span id="close_schedule_form">X</span>
+      </div>
     </div>
     <div class="main">
       <div class="title">
