Improvements in the construction.

--- a/Calendar/Calendar_Web_App/html/index.html
+++ b/Calendar/Calendar_Web_App/html/index.html
@@ -12,23 +12,38 @@
       <div class="close_button">
         <span id="close_schedule_form">X</span>
       </div>
-      <form>
+      <form id="pop_up">
         <div class="schedule_time_div">
-          <label for="schedule_starting_time">Starting at:</label>
-          <input id="schedule_starting_time" type="time" value="00:00" />
-          <label for="schedule_ending_time">Ending at:</label>
-          <input id="schedule_ending_time" type="time" value="23:59" />
+          <div class="schedule_time_div_2">
+            <label for="schedule_initial_time">Starting at:</label>
+            <input id="schedule_initial_time" type="time" value="00:00" />
+          </div>
+          <div class="schedule_time_div_2">
+            <label for="schedule_ending_time">Ending at:</label>
+            <input id="schedule_ending_time" type="time" value="23:59" />
+          </div>
         </div>
         <div class="schedule_title_div">
           <label for="schedule_title">Title</label>
-          <input id="schedule_title" type="text" required/>
+          <input
+            id="schedule_title"
+            placeholder="My title..."
+            type="text"
+            required
+          />
         </div>
         <div class="schedule_description_div">
           <label for="schedule_description">Description</label>
-          <input id="schedule_description" type="text" required/>
+          <input
+            id="schedule_description"
+            placeholder="My description..."
+            type="text"
+          />
         </div>
         <div class="schedule_button_div">
-          <button type="submit">Confirm</button>
+          <button id="save_schedule" form="pop_up" type="button">
+            Confirm
+          </button>
         </div>
       </form>
     </div>
@@ -51,8 +66,9 @@
             </tr>
           </table>
         </div>
-        <!-- Future implementations. -->
-        <div id="data_display" class="data_display"></div>
+        <div id="data_display" class="data_display">
+          <p id="data_display_p" style="color: black"></p>
+        </div>
       </div>
       <div class="buttons">
         <button id="back_button">
