Advance on the project.

--- a/Calendar/Calendar_Web_App/html/index.html
+++ b/Calendar/Calendar_Web_App/html/index.html
@@ -67,7 +67,15 @@
           </table>
         </div>
         <div id="data_display" class="data_display">
-          <p id="data_display_p" style="color: black"></p>
+          <div>
+            <div class="data_display_div_title">
+              <span id="data_display_title"></span>
+              <span id="data_display_time"></span>
+            </div>
+            <div class="data_display_div_description">
+              <span id="data_display_description"></span>
+            </div>
+          </div>
         </div>
       </div>
       <div class="buttons">
