--- a/Calendar/Calendar_Web_App/html/index.html
+++ b/Calendar/Calendar_Web_App/html/index.html
@@ -10,8 +10,10 @@
   <body>
     <div id="add_schedule" class="hide_pop_up">
       <div class="close_button">
-        <span id="schedule_top_message"></span>
-        <span id="schedule_day"></span>
+        <div>
+          <span id="schedule_top_message"></span>
+          <span id="schedule_day"></span>
+        </div>
         <span id="close_pop_up">X</span>
       </div>
       <form id="pop_up">
