--- a/Calendar/Calendar_Web_App/html/index.html
+++ b/Calendar/Calendar_Web_App/html/index.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <div id="add_schedule" class="hide_pop_up">
+    <div id="add_schedule" class="hide_form">
       <div class="close_button">
         <div>
-          <span id="schedule_top_message"></span>
+          <span id="form_top_message"></span>
         </div>
-        <span id="close_pop_up">X</span>
+        <span id="close_form">X</span>
       </div>
-      <form id="pop_up">
+      <form>
         <div class="schedule_time_div">
-          <div class="schedule_time_div_2">
+          <div>
             <label for="schedule_initial_time">Starting at:</label>
             <input id="schedule_initial_time" type="time" value="00:00" />
           </div>
-          <div class="schedule_time_div_2">
+          <div>
             <label for="schedule_final_time">Ending at:</label>
             <input id="schedule_final_time" type="time" value="23:59" />
           </div>
