Work in progress.

--- a/Calendar/Calendar_Web_App/html/index.html
+++ b/Calendar/Calendar_Web_App/html/index.html
@@ -12,6 +12,7 @@
       <div class="close_button">
         <div>
           <span id="form_top_message"></span>
+          <span id="clicked_day"></span>
         </div>
         <span id="close_form">X</span>
       </div>
