Work in progress.

--- a/Calendar/Calendar_Web_App/html/index.html
+++ b/Calendar/Calendar_Web_App/html/index.html
@@ -12,7 +12,9 @@
       <div class="close_button">
         <div>
           <span id="form_top_message"></span>
-          <span id="clicked_day"></span>
+          <span id="day"></span>
+          <span id="month"></span>
+          <span id="year"></span>
         </div>
         <span id="close_form">X</span>
       </div>
